src/test/ui/consts/const_unsafe_unreachable_ub.stderr
error[E0080]: evaluation of constant value failed
  --> $SRC_DIR/core/src/hint.rs:LL:COL
   |
LL |         intrinsics::unreachable()
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^
   |         |
   |         entering unreachable code
   |         inside `unreachable_unchecked`
   |
  ::: $DIR/const_unsafe_unreachable_ub.rs:6:18
   |
LL |         false => std::hint::unreachable_unchecked(),
   |                  ---------------------------------- inside `foo`
...
LL | const BAR: bool = unsafe { foo(false) };
   |                            ---------- inside `BAR`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
